--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Json_Parse_Listview</string>
-    <string name="title_activity_details">DetailsActivity</string>
+    <string name="app_name"></string>
+    <string name="title_activity_details">Details</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -90,6 +90,20 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">About</string>
     <string name="title_activity_splash_screen">Splash</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">RS POWER</string>
+    <string name="nav_header_subtitle">radhasonk.phy@gmail.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="help">Help</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_review">Review</string>
+    <string name="title_activity_main2">Story</string>
 </resources>
