--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,7 @@
     <string name="menu_share">Share</string>
     <string name="menu_review">Review</string>
     <string name="title_activity_main2">Story</string>
+    <string name="test_admob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="admob_app_id">cca-app-pub-3940256099942544~3347511713</string>
+
 </resources>
