--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,7 @@
     <string name="title_activity_main2">Story</string>
     <string name="test_admob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="admob_app_id">cca-app-pub-3940256099942544~3347511713</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search</string>
 
 </resources>
