--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"></string>
+    <string name="app_name">Story</string>
     <string name="title_activity_details">Details</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
@@ -96,7 +96,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">RS POWER</string>
-    <string name="nav_header_subtitle">radhasonk.phy@gmail.com</string>
+    <string name="nav_header_subtitle">RSysInfo</string>
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="menu_home">Home</string>
@@ -104,7 +104,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="help">Help</string>
     <string name="menu_share">Share</string>
-    <string name="menu_review">Review</string>
+    <string name="menu_review">Rate</string>
     <string name="title_activity_main2">Story</string>
     <string name="test_admob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="admob_app_id">cca-app-pub-3940256099942544~3347511713</string>
